Bug 324750 (KTpAuthCrash) - ktp-auth-handler PID: Segmentation fault (11)
Summary: ktp-auth-handler PID: Segmentation fault (11)
Status: RESOLVED FIXED
Alias: KTpAuthCrash
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: 0.6.3
Platform: Debian unstable Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
: 326948 327027 327368 327369 329132 331970 333732 335068 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-10 16:31 UTC by Gosha
Modified: 2014-05-30 18:22 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.41 KB, text/plain)
2014-01-26 00:26 UTC, dreadkinch
Details
New crash information added by DrKonqi (3.43 KB, text/plain)
2014-02-09 09:21 UTC, Robin
Details
New crash information added by DrKonqi (3.94 KB, text/plain)
2014-03-08 13:25 UTC, Mike Harvey
Details
New crash information added by DrKonqi (3.21 KB, text/plain)
2014-05-30 18:22 UTC, alex.panderium
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gosha 2013-09-10 16:31:01 UTC
Application: ktp-auth-handler (0.6.3)
KDE Platform Version: 4.10.5
Qt Version: 4.8.5
Operating System: Linux 3.10-2-686-pae i686
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:

Failure occurs when logging in Telepathy. After the restart "ktp-auth-handler" works.

The crash can be reproduced every time.

-- Backtrace:
Application: Обработчик аутентификации Telepathy (ktp-auth-handler), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/i686/cmov/libthread_db.so.1".
[KCrash Handler]
#6  0xb44b579c in QCA::Certificate::fromDER(QByteArray const&, QCA::ConvertResult*, QString const&) () from /usr/lib/i386-linux-gnu/libqca.so.2
#7  0x08059ef9 in TlsCertVerifierOp::gotProperties (this=this@entry=0x9d3a538, op=0x9768380) at /build/ktp-auth-handler-9GVzlR/ktp-auth-handler-0.6.3/tls-cert-verifier-op.cpp:98
#8  0x0805b5f3 in TlsCertVerifierOp::qt_static_metacall (_o=0x9d3a538, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf9f9068) at /build/ktp-auth-handler-9GVzlR/ktp-auth-handler-0.6.3/obj-i486-linux-gnu/tls-cert-verifier-op.moc:54
#9  0xb6a5ef25 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#10 0xb4f791a5 in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/i386-linux-gnu/libtelepathy-qt4.so.2
#11 0xb4f792bf in ?? () from /usr/lib/i386-linux-gnu/libtelepathy-qt4.so.2
#12 0xb6a5b6ba in QMetaCallEvent::placeMetaCall(QObject*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#13 0xb6a6358b in QObject::event(QEvent*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#14 0xb6d32884 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#15 0xb6d39383 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#16 0xb47614b4 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0xb6a49e0a in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#18 0xb6a4d5d5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#19 0xb6a4dafc in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#20 0xb6a7a13e in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#21 0xb394042e in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#22 0xb39407d8 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#23 0xb3940898 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#24 0xb6a7991f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#25 0xb6de3d9e in ?? () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#26 0xb6a48853 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#27 0xb6a48b79 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#28 0xb6a4e7ee in QCoreApplication::exec() () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#29 0xb6d30d14 in QApplication::exec() () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#30 0x08051348 in main (argc=1, argv=0xbf9f9794) at /build/ktp-auth-handler-9GVzlR/ktp-auth-handler-0.6.3/main.cpp:90

Reported using DrKonqi
Comment 1 David Edmundson 2013-09-10 16:48:10 UTC
Install qca-ossl

QCA packages have been split so the plugins are separate from the main library.

No idea why, it just crashes as soon as an app tries to use them, and there's no way that we can test.

Also please ask your distribution to update the dependencies of ktp-auth-handler to include this.
Comment 2 Gosha 2013-09-11 05:56:47 UTC
Install libqca2-plugin-ossl. Now works without error. Thank you!
Comment 3 David Edmundson 2013-09-24 14:59:25 UTC
Git commit c5222770fff5044dff2bc1e9d9ed1c52b3dd68ac by David Edmundson, on behalf of Diane Trout.
Committed on 24/09/2013 at 14:54.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Check for QCA certificate availability at run time.

This fixes a crash if packagers don't include qca-ossl a runtime
plugin for QCA needed to load SSL Certs.

Note this introduces a new string inside the feature freeze

Reviewed-by: David Edmundson
CC:  kde-i18n-doc@kde.org

M  +9    -1    tls-cert-verifier-op.cpp

http://commits.kde.org/telepathy-auth-handler/c5222770fff5044dff2bc1e9d9ed1c52b3dd68ac
Comment 4 Jekyll Wu 2013-10-31 15:31:03 UTC
*** Bug 326948 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2013-11-09 15:12:49 UTC
*** Bug 327369 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2013-11-09 15:12:56 UTC
*** Bug 327368 has been marked as a duplicate of this bug. ***
Comment 7 Jekyll Wu 2013-12-23 00:41:34 UTC
*** Bug 329132 has been marked as a duplicate of this bug. ***
Comment 8 dreadkinch 2014-01-26 00:26:27 UTC
Created attachment 84846 [details]
New crash information added by DrKonqi

ktp-auth-handler (0.6.3) on KDE Platform 4.11.3 using Qt 4.8.4

- What I was doing when the application crashed:

Logging on to Facebook chat in KDE IM Contacts

-- Backtrace (Reduced):
#5  QCA::Certificate::fromDER (a=..., result=result@entry=0x0, provider=...) at qca_cert.cpp:1608
#6  0x00000000004149cb in TlsCertVerifierOp::gotProperties (this=0x19d0cb0, op=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/tls-cert-verifier-op.cpp:98
#7  0x0000000000415f5d in TlsCertVerifierOp::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/obj-x86_64-linux-gnu/tls-cert-verifier-op.moc:55
[...]
#9  0x00007fa2b88fd09f in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/x86_64-linux-gnu/libtelepathy-qt4.so.2
[...]
#11 0x00007fa2bb22adce in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
Comment 9 Robin 2014-02-09 09:21:44 UTC
Created attachment 85060 [details]
New crash information added by DrKonqi

ktp-auth-handler (0.6.3) on KDE Platform 4.11.3 using Qt 4.8.4

- What I was doing when the application crashed: start KDE IM, it will automatically try to login to your IM accounts. Immediately, Telepathy crashes. How to submit to MINT distro owners so they can apply suggested adaptations?

-- Backtrace (Reduced):
#6  QCA::Certificate::fromDER (a=..., result=result@entry=0x0, provider=...) at qca_cert.cpp:1608
#7  0x08059e69 in TlsCertVerifierOp::gotProperties (this=this@entry=0x9424030, op=0x94268f8) at /build/buildd/ktp-auth-handler-0.6.3/tls-cert-verifier-op.cpp:98
#8  0x0805b563 in TlsCertVerifierOp::qt_static_metacall (_o=0x9424030, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfe15568) at /build/buildd/ktp-auth-handler-0.6.3/obj-i686-linux-gnu/tls-cert-verifier-op.moc:55
[...]
#10 0xb4688e55 in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/i386-linux-gnu/libtelepathy-qt4.so.2
[...]
#13 0xb6b2658b in QObject::event(QEvent*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
Comment 10 Robin 2014-02-09 09:30:00 UTC
Actually, it crashes when loggin on to Facebook. You apparently need to log on with your Facebook chat account, and the password to use is not your regular password, I got an sms from Facebook with the password to use for logging in.

That sms code was being remembered as password. However, now it seems I have to login with my regular Facebook password again... So authentication failed and made KDE IM crash.

Installed QCA OSSL anyway
Comment 11 Mike Harvey 2014-03-08 13:25:59 UTC
Created attachment 85476 [details]
New crash information added by DrKonqi

ktp-auth-handler (0.6.3) on KDE Platform 4.11.5 using Qt 4.8.4

I just open KDE IM Contacts and change status to Available then it crashes

-- Backtrace (Reduced):
#6  QCA::Certificate::fromDER (a=..., result=result@entry=0x0, provider=...) at qca_cert.cpp:1608
#7  0x00000000004149cb in TlsCertVerifierOp::gotProperties (this=0x2719d50, op=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/tls-cert-verifier-op.cpp:98
#8  0x0000000000415f5d in TlsCertVerifierOp::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/obj-x86_64-linux-gnu/tls-cert-verifier-op.moc:55
[...]
#10 0x00007f90542a709f in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/x86_64-linux-gnu/libtelepathy-qt4.so.2
[...]
#12 0x00007f9056bd4dce in QObject::event (this=0x263e300, e=<optimized out>) at kernel/qobject.cpp:1194
Comment 12 David Edmundson 2014-03-08 13:30:05 UTC
Mike, please see comment 1.
Comment 13 Martin Klapetek 2014-03-10 14:41:28 UTC
*** Bug 331970 has been marked as a duplicate of this bug. ***
Comment 14 Martin Klapetek 2014-03-10 14:44:03 UTC
*** Bug 327027 has been marked as a duplicate of this bug. ***
Comment 15 David Edmundson 2014-04-22 15:47:41 UTC
*** Bug 333732 has been marked as a duplicate of this bug. ***
Comment 16 David Edmundson 2014-05-20 09:24:13 UTC
*** Bug 335068 has been marked as a duplicate of this bug. ***
Comment 17 alex.panderium 2014-05-30 18:22:13 UTC
Created attachment 86919 [details]
New crash information added by DrKonqi

ktp-auth-handler (0.6.3) on KDE Platform 4.11.5 using Qt 4.8.4

- What I was doing when the application crashed:

I tried to log me on my Facebook account with the application MI.

-- Backtrace (Reduced):
#5  QCA::Certificate::fromDER (a=..., result=result@entry=0x0, provider=...) at qca_cert.cpp:1608
#6  0x00000000004149cb in TlsCertVerifierOp::gotProperties (this=0x1932500, op=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/tls-cert-verifier-op.cpp:98
#7  0x0000000000415f5d in TlsCertVerifierOp::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/ktp-auth-handler-0.6.3/obj-x86_64-linux-gnu/tls-cert-verifier-op.moc:55
[...]
#9  0x00007f38e4a5109f in Tp::PendingOperation::finished(Tp::PendingOperation*) () from /usr/lib/x86_64-linux-gnu/libtelepathy-qt4.so.2
[...]
#11 0x00007f38e737edce in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4