Check for QCA certificate availability at run time.

This fixes a crash if packagers don't include qca-ossl a runtime
plugin for QCA needed to load SSL Certs.

Note this introduces a new string inside the feature freeze

Reviewed-by: David Edmundson
CC:  kde-i18n-doc@kde.org
BUG: 324750